--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 project(maizena)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -pthread")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything -Wno-c++98-compat -Wno-padded -std=c++1y -pthread")
 
 find_package(Boost REQUIRED COMPONENTS program_options filesystem system serialization)
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
